assets/stylesheets/drawer.scss
$header-height: 2.5rem;

.topic-chat-float-container {
  z-index: 199; // higher than timeline, lower than composer, lower than user card
  position: fixed;
  right: 0;
  left: 0;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
  pointer-events: none !important;
  > * {
    pointer-events: auto;
  }
  bottom: 0;
  &.composer-draft-collapsed {
    bottom: 40px;
  }

  box-sizing: border-box;
  max-height: 90vh;
  padding-bottom: var(--composer-height, 0px);
  transition: padding-bottom 250ms ease;
}
.tc-drawer {
  align-self: flex-end;
}
.topic-chat-container {
  background: var(--secondary);
  border: 1px solid var(--primary-low-mid);
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  border-bottom: 0;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  height: 2.5em;

  &.expanded {
    max-height: 530px;
    height: calc(85vh - var(--composer-height, 0px));

    .tc-live-pane,
    .tc-chat-listing {
      max-height: calc(530px - #{$header-height});
      height: calc(85vh - var(--composer-height, 0px) - #{$header-height});
    }
  }
}

.topic-chat-drawer-header {
  box-sizing: border-box;
  border-bottom: solid 1px var(--primary-low-mid);
  padding: 0.5em;
  height: $header-height;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;

  button {
    height: 100%;
  }
  .tc-title-seg {
    padding: 0 0.25em;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow-x: hidden;
    color: var(--primary);
    .chat-channel-title .d-icon:not(.d-icon-hashtag) {
      color: var(--primary-high);
    }
    .chat-channel-title .category-hashtag {
      padding: 2px 4px;
    }
  }
  .tc-unread-count {
    color: var(--secondary, $secondary);
    background-color: var(--danger, $danger);
    border-radius: 1.4em;
    min-width: 1.4em;
    min-height: 1.4em;
    display: inline-block;
    text-align: center;
  }
  .tc-expand {
    flex-grow: 1;
    text-align: right;
    &:focus {
      background: none;
    }
  }
  .d-icon {
    align-self: center;
    height: 1.1em;
  }
}

.tc-messages-container {
  word-wrap: break-word;
  white-space: normal;

  .tc-message-deleted {
    padding: 0.25em;

    &:hover {
      background: var(--primary-very-low);
    }

    .tc-message-expand-deleted {
      color: var(--primary-high);
      padding: 0.25em;
    }
  }

  .tc-message {
    position: relative;
    padding: 0.25em 0.5em 0.25em 0.75em;
    background-color: var(--secondary);
    display: flex;

    &:hover {
      background: var(--primary-very-low);
    }
    &.tc-action {
      background-color: var(--highlight-medium);
    }
    &.deleted {
      background-color: var(--danger-medium);
    }
    &.highlighted {
      background-color: var(--tertiary-low);
    }
    &.transition-slow {
      transition: 2s linear background-color;
    }
    &.is-reply {
      display: grid;
      grid-template-columns: 10% 90%;
      grid-template-rows: 30px auto;
      grid-template-areas:
        "replyto replyto"
        "avatar message";
      .tc-reply-display {
        grid-area: replyto;
      }
      .tc-avatar {
        grid-area: avatar;
        width: 100%;
      }
      .tc-message-container {
        grid-area: message;
        width: 100%;
      }
    }
    .tc-avatar {
      width: calc(10% - 0.25em);
      margin-right: 0.25em;
      cursor: pointer;
      .avatar {
        width: 90%;
        height: auto;
      }
    }
    .tc-message-container {
      width: 90%;
    }
    .tc-text {
      margin: 0;
      padding-left: 0.05em;
    }
    .tc-message-edited {
      display: inline-block;
      color: var(--primary-medium);
      font-size: var(--font-down-1);
    }
    .tc-reply-display {
      display: inline-block;
      text-overflow: ellipsis;
      overflow-x: hidden;
      white-space: nowrap;
      width: 94%;
      font-size: 0.8em;
      line-height: 0.8em;
      margin-bottom: -0.5em;
    }
  }
  .tc-action-text {
    font-style: italic;
  }

  .tc-msgactions-hover {
    position: absolute;
    opacity: 0;
    pointer-events: none;
    right: 0.25em;
    // Give a larger hover box
    margin-top: -1em;
    padding-top: 1em;

    button {
      padding: 0.25em 0.5em;
    }
  }

  .tc-message.is-reply .tc-msgactions-hover {
    top: 35px;
  }

  .tc-message:hover,
  .tc-message:focus-within {
    .tc-msgactions-hover {
      opacity: 1;
      pointer-events: initial;
    }
  }

  .tc-msgactions {
    display: flex;
  }

  .tc-meta-data {
    color: var(--secondary-medium);
    .names {
      color: var(--secondary-low);
      display: inline-block;
      vertical-align: bottom;
      margin-left: 0;
      margin-right: 4px;
      &.first {
        font-weight: bold;
      }
    }
  }
}

.tc-live-pane {
  display: flex;
  flex-direction: column;
  align-items: stretch;

  .tc-messages-scroll {
    flex-grow: 1;
    overflow-y: scroll;
    scrollbar-color: var(--primary-low) transparent;
    transition: scrollbar-color 0.2s ease-in-out;
    &::-webkit-scrollbar {
      width: 15px;
    }
    &::-webkit-scrollbar-thumb {
      background: var(--primary-low);
      border-radius: 8px;
      border: 3px solid var(--secondary);
    }
    &::-webkit-scrollbar-track {
      background-color: transparent;
    }
    &:hover {
      scrollbar-color: var(--primary-low-mid) transparent;
      &::-webkit-scrollbar-thumb {
        background: var(--primary-low-mid);
      }
    }
  }

  .scroll-stick-wrap {
    position: relative;
  }
  .scroll-stick-wrap2 {
    position: absolute;
    bottom: 0;
    margin-bottom: 1em;
    display: flex;
    width: 100%;
    justify-content: center;
  }

  .chat-scroll-to-bottom {
    background: var(--primary-medium);
    padding: 0.5em;
    border-radius: 100%;
    opacity: 20%;

    .d-icon {
      color: var(--primary);
      margin: 0;
    }
  }

  .tc-composer {
    min-height: 1.5em;
    flex-shrink: 0;
    width: 95%;
    margin: 0 auto 0.5em auto;

    .tc-reply-username {
      font-weight: bold;
    }

    .tc-composer-row {
      position: relative;
      display: grid;

      &::after {
        content: attr(data-replicated-value) " ";
        white-space: pre-wrap;
        visibility: hidden;
        outline: none;
      }

      &:focus,
      .tc-composer-input:focus {
        border: 1px solid var(--primary-medium);
        outline: none;
        + .mobile-send-btn .d-icon {
          color: var(--tertiary);
        }
      }
    }

    .tc-composer-row > .tc-composer-input,
    .tc-composer-row::after {
      grid-area: 1 / 1 / 2 / 2;
      margin-bottom: 0;
      resize: none;
      max-height: 125px;
      padding: 8px;
      width: calc(100% - 16px);
      border-radius: 4px;
      border: 1px solid var(--primary-low-mid);
      word-break: break-all;
    }

    .tc-composer-message-details {
      position: relative;
      width: 100%;
      flex-direction: row;
      padding: 6px 4px;
      height: 1.6em;
      border-top: 1px solid var(--primary-low);

      .width-limited {
        display: inline-block;
        width: calc(100% - 28px);
        height: 1.5em;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
        flex-grow: 1;
      }
    }
    .cancel-message-action {
      position: absolute;
      top: 6px;
      right: 5px;
      padding: 4px;
    }

    .d-icon {
      animation: color 0.2s ease-in-out;
      color: var(--primary-low-mid);
    }
  }
}

.topic-title-chat-icon {
  display: inline-block;
  * {
    display: inline-block;
  }
}

.topic-title-chat-link {
  padding: 0 0.1em;
  cursor: pointer;
}

.d-header {
  .topic-title-chat-link {
    padding: 0 0.2em 0 0.25em;
  }
}

.chat-channel-row {
  display: flex;
  padding: 0.5em;
  cursor: pointer;
  color: var(--primary-high);
  align-items: center;

  &:hover {
    background: var(--primary-low);
  }

  &.nested {
    padding-left: 1.75em;
  }

  .badge-wrapper {
    align-items: center;
    margin-right: 0;
  }
}

.chat-channel-title {
  display: flex;
  align-items: center;
  .d-icon-lock {
    margin-right: 0.25em;
  }
  .badge-category {
    font-size: var(--font-up-1);
  }
  .chat-name {
    margin: 0 0 0 0.25em;
    font-weight: 500;
  }
  .topic-chat-icon {
    color: var(--primary-medium);
  }
}

:root:not(.mobile-view) {
  .tc-drawer {
    width: 400px;
    margin-right: 20px;
    max-width: calc(100vw - 20px);
  }
}
:root.mobile-view {
  .tc-drawer {
    width: 100vw;
    margin-right: 0px;
  }
  #main {
    padding-bottom: $header-height;
  }
  .tc-composer .tc-composer-row {
    .tc-composer-input {
      padding-right: 2.5em;

      width: calc(100% - 2.5em - 8px);
    }

    .mobile-send-btn {
      position: absolute;
      padding: 10px;
      right: 3px;
      top: 50%;
      transform: translateY(-50%);
    }
  }
}

